# ShipSpareTracking

./: .replit  README.md  app_settings.py  barcode_handler.py  data_manager.py  inventory.db  main.py  navbar.py  pyproject.toml  repomix-output.txt  repomix-output.xml  requirements.txt  session_manager.py  user_management.py  utils.py
.streamlit/: config.toml
docs/: SHIP INVENTORY MANAGEMENT SYSTEM.docx
pages/: admin.py  analytics.py  data_management.py  departments.py  inventory.py  operations.py  reports.py
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
